syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/DemianShtepa/microservices-course/auth/pkg/grpc/v1/user;user";

service UserV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Update(UpdateRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

enum Role {
  user = 0;
  admin = 1;
}

message User {
  uint64 id = 1;
  string name = 2;
  string email = 3;
  Role role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  Role role = 5;
}

message CreateResponse {
  uint64 id = 1;
}

message GetRequest {
  uint64 id = 1;
}

message GetResponse {
  User user = 1;
}

message UpdateRequest {
  uint64 id = 1;
  string name = 2;
  string email = 3;
}

message DeleteRequest {
  uint64 id = 1;
}
